# genai-procurement

./: .env.example  .gitignore  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  pip.conf  pyproject.toml  ruff.toml
form/: main.py
form/agents/: agents_manager.py  base_agent.py  conversation_agent.py  intent_agent.py  note_taking_agent.py  specialist_agent.py
form/api/: api_router.py  deps.py
form/db/: __init__.py  db_check.py  db_operations.py  db_tables.py  init.pgsql
form/models/: requests.py  responses.py
form/prompts/: conversation_sys_prompt.txt  intent_sys_prompt.txt  specialist_sys_prompt.txt
form/schemas/: form_val.json
form/static/: script.js  styles.css
form/templates/: index.html
form/utils/: config.py  form_handler.py
form/vectorstore/: pgvector.py
procurement/: main.py
procurement/agents/: agents_manager.py  base_agent.py  conversation_agent.py  intent_agent.py  note_taking_agent.py  specialist_agent.py
procurement/api/: api_router.py  deps.py
procurement/db/: __init__.py  db_check.py  db_operations.py  db_tables.py  init.pgsql
procurement/models/: exceptions.py  requests.py
procurement/prompts/: conversation_sys_prompt.txt  intent_sys_prompt.txt  note_taking_sys_prompt.txt  specialist_sys_prompt.txt
procurement/schemas/: form.json  form_val.json  main.json
procurement/static/: script.js  styles.css
procurement/templates/: index.html
procurement/utils/: config.py  form_handler.py  text_handler.py
procurement/vectorstore/: pgvector.py
tests/: __init__.py  conftest.py
tests/test_endpoints/: __init__.py  (+5 more)
(+16 files in other folders)
