[tool.poetry]
name = "procurement"
version = "0.1.0"
description = "A multi-agent solution"
authors = ["Abdelrashied, Mostafa <Mostafa.Abdelrashied@outlook.de>"]
readme = "README.md"
packages = [{ include = "procurement" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
fastapi-sessions="^0.3.2"
openai = "^1.35.8"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pgvector = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
coverage = "^7.6.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "procurement.main:start"


# [[tool.poetry.source]]
# name = "nexus"
# url = "https://it4it-nexus-tp-repo.swissbank.com/repository/proxy-lib-python-pypi-oss-python-org/simple/"
